// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkFlatListItemSeparator dark mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(68, 80, 95)",
      "flex": 1,
      "height": 1,
      "marginHorizontal": 8,
    }
  }
/>
`;

exports[`Android BpkFlatListItemSeparator light mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(194, 201, 205)",
      "flex": 1,
      "height": 1,
      "marginHorizontal": 8,
    }
  }
/>
`;
